# incident-commander

./: .gitignore  README.md  projdesc.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: ai.py  incidents.py  ingest.py  timeline.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: ai_artifact.py  event.py  incident.py  timeline_entry.py
backend/app/schemas/: ai.py  incident.py  ingest.py  timeline.py
backend/app/services/: ai_service.py  incident_service.py  ingestion_service.py  llm_client.py  normalization_service.py  prompt_service.py  timeline_service.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai/: page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/how-it-works/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/ingestion/: page.tsx
frontend/app/timeline/: page.tsx
frontend/components/: site-footer.tsx  site-header.tsx  theme-toggle.tsx
frontend/lib/: api.ts  types.ts
